--- a/app/src/main/res/layout/activity_hasil.xml
+++ b/app/src/main/res/layout/activity_hasil.xml
@@ -10,10 +10,10 @@
     android:weightSum="1"
     tools:context="id.sch.smktelkom_mlg.learn.intent1.HasilActivity">
 
-    <Button
-        android:id="@+id/buttonBack"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/textViewHasil"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.87"
-        android:text="Kembali" />
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 </LinearLayout>
